gaon/nginx-deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: hwlim78/gaon-nginx:v1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: source-code
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          name: nginx-config
      volumes:
      - name: source-code
        persistentVolumeClaim:
          claimName: source-code-pvc
      - name: nginx-config
        configMap:
          name: nginx-config
