gaon/nginx-deployment-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: hwlim78/gaon-nginx:v1.0
          volumeMounts:
            - mountPath: /var/www/html
              name: source-code
            - mountPath: /etc/nginx/conf.d
              name: nginx-config
      volumes:
        - name: source-code
          persistentVolumeClaim:
            claimName: source-code-pvc
        - name: nginx-config
          persistentVolumeClaim:
            claimName: nginx-config-pvc
