gaon/kanico.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mariadb
          image: docker.io/hwlim78/gaon-db:v1.0  # Docker Hub 이미지 사용
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
# PHP-FPM Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: docker.io/hwlim78/gaon-php:v1.0  # Docker Hub 이미지 사용
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: source-code
              mountPath: /var/www/html
      volumes:
        - name: source-code
          emptyDir: {}  # emptyDir 볼륨 사용
        - name: source-host
          emptyDir: {}
          #hostPath:
            #path: /home/ubuntu/kanico/source  # 호스트 머신의 소스 코드 경로

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000

---
# Nginx Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/hwlim78/gaon-nginx:v1.0  # Docker Hub 이미지 사용
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: source-code
              mountPath: /var/www/html
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: source-code
          emptyDir: {}  # emptyDir 볼륨 사용
        - name: source-host
          emptyDir: {}
          #hostPath:
            #path: /home/ubuntu/kanico/source  # 호스트 머신의 소스 코드 경로
        - name: nginx-conf
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort  # Minikube에서 외부 접근용
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # 30000-32767 범위에서 선택
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
