gaon/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: hwlim78/gaon-nginx:v1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: source-code
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          name: nginx-config
            #      initContainers:
            #      - name: init-git
            #        image: alpine/git
            #        command:
            #        - sh
            #        - -c
            #        - |
            #          git clone https://github.com/yblmmen/gaon.git /tmp/gnuboard5 \
            #          && cp -r /tmp/gnuboard5/gaon/source/* /var/www/html
          # && mkdir /var/www/html/date
        volumeMounts:
        - mountPath: /var/www/html
          name: source-code
      volumes:
      - name: source-code
        persistentVolumeClaim:
          claimName: source-code-pvc
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: LoadBalancer
    #type: ClusterIP
    # type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
        # nodePort: 30080
        #- port: 443
        #name: https
        #targetPort: 443
        #protocol: TCP
        # nodePort: 30443
  externalIPs:
    - 192.168.100.62
