gaon/nginx-service-latest.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  #type: LoadBalancer
    #type: ClusterIP
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
      nodePort: 30080
    - port: 443
      name: https
      targetPort: 443
      protocol: TCP
      nodePort: 30443
