gaon/gaon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: docker.io/hwlim78/gaon-db:v1.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-storage
      volumes:
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: NodePort
    #type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30306
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: docker.io/hwlim78/gaon-php:v1.0 # 빌드한 이미지를 여기에 사용합니다.
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /var/www/html
          name: source-code
      volumes:
      - name: source-code
        hostPath:
          path: /home/ubuntu/kanico/source
---
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    app: php
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: docker.io/hwlim78/gaon-nginx:v1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: source-code
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          name: nginx-config
            #      initContainers:
            #      - name: init-git
            #        image: alpine/git
            #        command:
            #        - sh
            #        - -c
            #        - |
            #          git clone https://github.com/yblmmen/gaon.git /tmp/gnuboard5 \
            #          && cp -r /tmp/gnuboard5/gaon/source/* /var/www/html
          # && mkdir /var/www/html/date
        volumeMounts:
        - mountPath: /var/www/html
          name: source-code
      volumes:
      - name: source-code
        persistentVolumeClaim:
          claimName: source-code-pvc
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: LoadBalancer
    #type: ClusterIP
    # type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
        # nodePort: 30080
        #- port: 443
        #name: https
        #targetPort: 443
        #protocol: TCP
        # nodePort: 30443
#  externalIPs:
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gaon.innerinfo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
spec:
  #type: LoadBalancer
  type: ClusterIP
    #type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
