gaon/ingress-gaon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaon-ingress
  namespace: gaon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: worker2.innerinfo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  name: gaon
  labels:
    app: nginx-ingress
spec:
  #type: LoadBalancer
  type: ClusterIP
    #type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
        # nodePort: 30080
        #- port: 443
        #name: https
        #targetPort: 443
        #protocol: TCP
        # nodePort: 30443
